# SGGW_Wdrazanie_rozwiazan_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/plans/: ocr_rag_api_f2a6af69.plan.md
app/: main.py
app/api/: documents.py  health.py  rag.py
app/core/: config.py
app/db/: qdrant.py  sqlite.py
app/models/: domain.py  schemas.py
app/services/: background_tasks.py  rag_service.py  vlm_service.py
app/utils/: query_parsing.py  text_processing.py  upload_validation.py
docs/: Faktury - Zadanie zaliczeniowe 2 - studia podyplomowe SSGW (29 maja).docx  api-plan.md  architektura.md  db-plan.md  k8s-plan.md  prd.md  project-structure.md  stan-projektu.md
k8s/: 01-namespace.yaml  02-storage.yaml  03-qdrant.yaml  04-api.yaml  README.md
scripts/: deploy-k8s.sh
