[project]
name = "zaliczenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.37.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
    "torch>=2.12.0",
]

# CPU-only PyTorch in Docker/Linux (no NVIDIA CUDA wheels from PyPI).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
